name:                pylon
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Graphics.Pylon.Foreign.Cairo.Cairo
                     , Graphics.Pylon.Foreign.Cairo.Path
                     , Graphics.Pylon.Foreign.Cairo.Pattern
                     , Graphics.Pylon.Foreign.Cairo.Types
                     , Graphics.Pylon.Foreign.Cairo.Surface
                     , Graphics.Pylon.Foreign.Cairo.Surfaces
                     , Graphics.Pylon.Foreign.Cairo.Version

                     , Graphics.Pylon.Foreign.Pango.Layout
                     , Graphics.Pylon.Foreign.Pango.Cairo
                     , Graphics.Pylon.Foreign.Pango.Font

                     , Graphics.Pylon.Foreign.GObject

                     , Graphics.Pylon.Cairo.Surface
                     , Graphics.Pylon.Cairo.Cairo
                     , Graphics.Pylon.Cairo.Path
                     
                     , Graphics.Pylon.Pango.Cairo
                     , Graphics.Pylon.Pango.Layout
                     , Graphics.Pylon.Pango.Font
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8
                     , bytestring >=0.10 && <0.11
                     , text >=1.0 && <1.3
  extra-libraries:     cairo, pango-1.0, pangocairo-1.0, gobject-2.0
  include-dirs:        /usr/local/include/cairo, /usr/local/include/pango-1.0, /usr/local/include/glib-2.0, /usr/local/lib/glib-2.0/include/
  -- hs-source-dirs:      
  build-tools:         hsc2hs
  default-language:    Haskell2010
